--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gamestables",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://steam.61hub.com",
+  "homepage": "http://steamify.61hub.com",
   "dependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
