--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@blueprintjs/core": "^3.15.0",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
+    "final-form": "^4.16.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-final-form": "^6.3.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
