--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.15.0",
     "axios": "^0.18.0",
+    "classnames": "2.2.6",
     "date-fns": "^1.30.1",
     "final-form": "^4.16.1",
     "lodash": "^4.17.11",
@@ -36,6 +37,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "node-sass": "4.12.0"
   }
 }
