better add dlc flow

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "final-form": "^4.16.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "proptypes": "^1.1.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-final-form": "^6.3.0",
+    "react-final-form": "6.3.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
