--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-final-form": "6.3.0",
+    "react-inlinesvg": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "svg-inline-react": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
