--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.15.0",
     "@blueprintjs/select": "^3.9.0",
+    "antd": "^3.24.3",
     "axios": "^0.18.0",
     "classnames": "2.2.6",
     "date-fns": "^1.30.1",
