--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "2.2.6",
     "date-fns": "^1.30.1",
     "final-form": "^4.16.1",
+    "firebase": "^7.15.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "proptypes": "^1.1.0",
@@ -23,6 +24,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "steam-api": "^1.1.3",
     "svg-inline-react": "^3.1.0"
   },
   "scripts": {
